--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.4",
+    "stripe": "^15.4.0",
     "typescript": "^5.2.2"
   }
 }
